[package]
edition = "2021"
name    = "commission-board"
version = "0.1.0"

[dependencies]
actix-web          = { version = "4.4" }
anyhow             = { version = "1.0" }
array-bytes        = { version = "6.1" }
futures            = { version = "0.3" }
once_cell          = { version = "1.8" }
parity-scale-codec = { version = "3.6", features = ["derive"] }
reqwest            = { version = "0.11", features = ["json"] }
serde              = { version = "1.0", features = ["derive"] }
subrpcer           = { version = "0.10" }
